# dagster-clickhouse

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  docker-compose.yml  example_config.yaml  pyproject.toml
.github/workflows/: ci.yml  lint.yml  release.yml  security.yml  test.yml
dagster_clickhouse/: __init__.py
dagster_clickhouse/event_log/: __init__.py  event_log.py
tests/: __init__.py  test_clickhouse_storage.py
